syntax = "proto3";

package pb;
option go_package = "./pb";

message bidRequest {
    uint32 userID = 1;
    int32 amount = 2;
}

message bidResponse {
    string ack = 1;
}

message Empty {

}

message resultResponse {
    int32 result = 1;
}

service Frontend {
    rpc bid (bidRequest) returns (bidResponse){}
    rpc result (Empty) returns (resultResponse){}
}

message bidReplicaRequest {
    int32 amount = 2;
}

message bidReplicaResponse {
    string ack = 1;
}

message resultReplicaResponse {
    int32 result = 1;
}

service Replica {
    rpc bid (bidReplicaRequest) returns (bidReplicaResponse){}
    rpc result (Empty) returns (resultReplicaResponse){}
}

